# catskills-hike-planner

./: .gitignore  README.md  devserver.py  graph.py  handler.py  package-lock.json  peak_planner.py  pyproject.toml  serverless.yml  subset_cover.py
data/: hikes.json  network+parking.geojson
data/catskills/: hikes.json
